config-synctest-pc-demo/policy-controller/constraint-for-constraint-template.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyName
metadata:
  name: cct-policy-constraint
spec:
  parameters:
    invalidName: "sada-dhl"
